--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ install:
 script:
 - dotnet build
 - dotnet test test/MathTests/MathTests.csproj
-- sonar-scanner
+#- sonar-scanner
 -notifications:
 -  email: false
